<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.component.view.ContestsHomeActivity">
    <item
        android:id="@+id/action_platforms"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:orderInCategory="99"
        android:title="@string/action_platform"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_app"
        android:orderInCategory="100"
        android:title="@string/action_about_app"
        app:showAsAction="never" />
</menu>
